fix: Revert selection control vertical alignment changes

--- a/src/table/selection/styles.scss
+++ b/src/table/selection/styles.scss
@@ -29,12 +29,6 @@
   padding-block-start: awsui.$space-xs;
 }
 
-.label-bottom {
-  align-items: end;
-  padding-block-start: awsui.$space-xs;
-  padding-block-end: calc(awsui.$space-xxs + awsui.$space-xxs);
-}
-
 .stud {
   visibility: hidden;
 }
